--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-concat": "^2.6.0",
+    "gulp-ng-annotate": "^1.1.0",
     "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "karma": "^0.13.9",
     "path": "^0.11.14"
