--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "author": "Adam Sheldon (flacnut)",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "async": "^1.4.2",
     "del": "^1.2.1",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.7.0",
     "gulp-concat": "^2.6.0",
+    "gulp-jsdoc": "^0.1.4",
+    "gulp-jsdoc-to-markdown": "^1.1.1",
     "gulp-ng-annotate": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
